Pingpong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 2345
      targetPort: 3000
